--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,26 +1,31 @@
 body {
-		font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
-		font-weight: normal;
-		line-height: 1.6;
+    font-family:
+        Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial,
+        sans-serif;
+    font-weight: normal;
+    line-height: 1.6;
     color: #333;
-		background-color: #white;
+    background-color: white;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
 
-h1, h2 {
+h1,
+h2 {
     color: #2c3e50;
-		line-height: 2rem;
+    line-height: 2rem;
 }
 
 .demo-container {
     background-color: #333;
-		color: #eee;
+    color: #eee;
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
-		font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+    font-family:
+        ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
+        "DejaVu Sans Mono", monospace;
 }
 
 .input-group {
@@ -33,14 +38,15 @@ label {
     font-weight: bold;
 }
 
-input[type="text"], input[type="number"] {
+input[type="text"],
+input[type="number"] {
     width: 95%;
     padding: 8px;
     border: 0 solid transparent;
     border-radius: 4px;
     font-size: 16px;
-		color: #333;
-		background-color: #eee;
+    color: #333;
+    background-color: #eee;
 }
 
 .output-container {
@@ -60,18 +66,20 @@ input[type="text"], input[type="number"] {
 }
 
 #options {
-	background-color: #eee;
-	color: #333;
-	padding: 8px;
-	font-size: 16px;
-	border-radius: 4px;
+    background-color: #eee;
+    color: #333;
+    padding: 8px;
+    font-size: 16px;
+    border-radius: 4px;
 }
 
 code {
     background-color: #333;
     padding: 2px 4px;
     border-radius: 3px;
-    font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+    font-family:
+        ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
+        "DejaVu Sans Mono", monospace;
 }
 
 pre {
